feat: pipe stderr stdout from subprocess to main process